# montador_ias

./: CMakeLists.txt  README.md  bla.txt
saidas/: arq00.res  arq09.res  arq10.res  arq11.res  arq14.res  arq15.res  arq16.res  arq18.res  arq19.res  arq20.res  arq21.res  arq22.res  arq23.res
src/: auxMontador.c  emitirMapaDeMemoria.c  main.c  montador.h  processarEntrada.c  teste.c
